--- a/VisualLinkerScript.vcxproj
+++ b/VisualLinkerScript.vcxproj
@@ -208,6 +208,7 @@
     </QtUic>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Components\MemoryVisualizer\QMemoryLayoutRender.cpp" />
     <ClCompile Include="Components\QLinkerScriptSession\AutoStyling\CAutoStyler.cpp" />
     <ClCompile Include="Components\QLinkerScriptSession\EditorAction\SEditorRemoveLine.h" />
     <ClCompile Include="Components\QLinkerScriptSession\EditorAction\SEditorReplaceContent.h" />
@@ -221,7 +222,6 @@
     <ClCompile Include="Components\QManualSizeGrip\QManualSizeGrip.cpp" />
     <ClCompile Include="Components\QScintilla\scintilla\lexlib\Accessor.cpp" />
     <ClCompile Include="Components\QScintilla\scintilla\src\AutoComplete.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\Rendering\CArrowsRenderer.cpp" />
     <ClCompile Include="Components\QScintilla\VlsScintilla.cpp" />
     <ClCompile Include="DrcEngine\CCorrectiveAction.h" />
     <ClCompile Include="DrcEngine\EDrcViolationCode.cpp" />
@@ -240,7 +240,6 @@
     <ClCompile Include="ParsingEngine\SubParsers\CExpressionParser.cpp" />
     <ClCompile Include="Models\CFunctionCall.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CFunctionParser.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\CGraphicsProcessor.cpp" />
     <ClCompile Include="DrcEngine\Rules\CIncludeRecursionGuard.cpp" />
     <ClCompile Include="DrcEngine\Rules\CIncludedFilesArePresentRule.cpp" />
     <ClCompile Include="Models\CInputSectionFunction.cpp" />
@@ -254,21 +253,16 @@
     <ClCompile Include="Models\CLinkerScriptFile.cpp" />
     <ClCompile Include="DrcEngine\Rules\CLocationCounterCannotGoBackwardsRule.cpp" />
     <ClCompile Include="ParsingEngine\CLinkerScriptParser.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\Rendering\CMemoryObjectRenderer.cpp" />
     <ClCompile Include="Models\CMemoryRegion.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CMemoryRegionContentParser.cpp" />
     <ClCompile Include="DrcEngine\Rules\CMemoryRegionDefinedOnlyOnceRule.cpp" />
     <ClCompile Include="Models\CMemoryStatement.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CMemoryStatementAttributeParser.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\CMouseInteractivity.cpp" />
     <ClCompile Include="DrcEngine\Rules\CNoDuplicateMemoryRegionNameRule.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\Rendering\COverlapObjectRenderer.cpp" />
     <ClCompile Include="Models\CPhdrsRegion.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CPhdrsRegionContentParser.cpp" />
     <ClCompile Include="Models\CPhdrsStatement.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\Placement\CPlacementEngine.cpp" />
     <ClCompile Include="Models\CProcedureCall.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\Rendering\CSectionObjectRenderer.cpp" />
     <ClCompile Include="Models\CSectionOutputCommand.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CSectionOutputCommandParser.cpp" />
     <ClCompile Include="Models\CSectionOutputOverlay.cpp" />
@@ -277,10 +271,8 @@
     <ClCompile Include="DrcEngine\Rules\CSectionsDefinedOnlyOnceRule.cpp" />
     <ClCompile Include="Models\CSectionsRegion.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CSectionsRegionParser.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\Rendering\CStatementRenderer.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CSubParserBase.cpp" />
     <ClCompile Include="DrcEngine\Rules\CSymbolsDefinedInAdvanceRule.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\Rendering\CTooltipRenderer.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CVersionRegionContentParser.cpp" />
     <ClCompile Include="Models\CVersionScope.cpp" />
     <ClCompile Include="Components\QScintilla\scintilla\src\CallTip.cpp" />
@@ -318,7 +310,7 @@
     <ClCompile Include="Components\QScintilla\src\MacPasteboardMime.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Components\QScintilla\scintilla\src\MarginView.cpp" />
-    <ClCompile Include="Components\MemoryVisualizer\ModelTranslator.cpp" />
+    <ClCompile Include="Components\MemoryVisualizer\CModelTranslator.cpp" />
     <ClCompile Include="Components\QScintilla\scintilla\src\PerLine.cpp" />
     <ClCompile Include="Components\QScintilla\src\PlatQt.cpp" />
     <ClCompile Include="Components\QScintilla\scintilla\src\PositionCache.cpp" />
@@ -363,6 +355,8 @@
   <ItemGroup>
     <QtMoc Include="Components\QFlatCheckBox\QFlatCheckBox.h" />
     <QtMoc Include="Components\InputDialogs\QLabelAssistedInput.h" />
+    <ClInclude Include="Components\MemoryVisualizer\Models\CSectionDefinitionBase.h" />
+    <QtMoc Include="Components\MemoryVisualizer\QMemoryLayoutRender.h" />
     <ClInclude Include="Components\QLinkerScriptSession\AutoStyling\CAutoStyler.h" />
     <ClInclude Include="Components\QLinkerScriptSession\EditorAction\EEditorActionType.h" />
     <ClInclude Include="Components\QLinkerScriptSession\EditorAction\SEditorActionBase.h" />
@@ -384,8 +378,6 @@
     <ClInclude Include="Models\CComment.h" />
     <ClInclude Include="Models\ESeverityCode.h" />
     <ClInclude Include="Compiler\ExpressionEvaluation\CArithmeticResultOp.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CArrowObject.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Rendering\CArrowsRenderer.h" />
     <ClInclude Include="Models\CIndentationInfo.h" />
     <ClInclude Include="ParsingEngine\CLexerViolation.h" />
     <ClInclude Include="ParsingEngine\ELexerViolationCode.h" />
@@ -405,7 +397,6 @@
     <ClInclude Include="DrcEngine\CDrcManager.h" />
     <ClInclude Include="DrcEngine\CDrcViolation.h" />
     <ClInclude Include="DrcEngine\Rules\CEntryIsDefinedRule.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CEntryPoint.h" />
     <ClInclude Include="Compiler\ExpressionEvaluation\CEvaluatableBase.h" />
     <ClInclude Include="Messaging\CEventAggregator.h" />
     <ClInclude Include="Models\CExpression.h" />
@@ -417,11 +408,10 @@
     <ClInclude Include="Messaging\LinkerScriptManager\CFileWasOpenedEvent.h" />
     <ClInclude Include="Messaging\UserInitiated\CFindReplaceRequest.h" />
     <ClInclude Include="Messaging\UserInitiated\CFindRequest.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CFloorplan.h" />
+    <ClInclude Include="Components\MemoryVisualizer\Models\CFloorPlan.h" />
     <ClInclude Include="Models\CFunctionCall.h" />
     <ClInclude Include="Compiler\FunctionEvaluation\CFunctionEvaluatorBase.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CFunctionParser.h" />
-    <ClInclude Include="Components\MemoryVisualizer\CGraphicsProcessor.h" />
     <ClInclude Include="Models\CIncludeCommand.h" />
     <ClInclude Include="DrcEngine\Rules\CIncludeRecursionGuard.h" />
     <ClInclude Include="DrcEngine\Rules\CIncludedFilesArePresentRule.h" />
@@ -438,38 +428,32 @@
     <ClInclude Include="Models\CParsedContentBase.h" />
     <ClInclude Include="Models\CLinkerScriptFile.h" />
     <ClInclude Include="QueryEngine\CLinq.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CLmaToVmaArrow.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CLmaToVmaArrowCoordinates.h" />
     <ClInclude Include="Messaging\UserInitiated\CLoadMappingFileRequest.h" />
     <ClInclude Include="DrcEngine\Rules\CLocationCounterCannotGoBackwardsRule.h" />
     <ClInclude Include="ParsingEngine\CLinkerScriptParser.h" />
     <ClInclude Include="ParsingEngine\CMasterParserException.h" />
     <ClInclude Include="Components\MemoryVisualizer\Models\CMemoryLocationIndicator.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CMemoryObject.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Rendering\CMemoryObjectRenderer.h" />
+    <ClInclude Include="Components\MemoryVisualizer\Models\CMemorySection.h" />
     <ClInclude Include="Models\CMemoryRegion.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CMemoryRegionContentParser.h" />
     <ClInclude Include="DrcEngine\Rules\CMemoryRegionDefinedOnlyOnceRule.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CMemoryRegionParser.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CMemoryStatement.h" />
+    <ClInclude Include="Components\MemoryVisualizer\Models\CSectionDefinition.h" />
     <ClInclude Include="Models\CMemoryStatement.h" />
     <ClInclude Include="Models\CMemoryStatementAttribute.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CMemoryStatementAttributeParser.h" />
-    <ClInclude Include="Components\MemoryVisualizer\CMouseInteractivity.h" />
     <ClInclude Include="DrcEngine\Rules\CNoDuplicateMemoryRegionNameRule.h" />
     <ClInclude Include="Messaging\General\CNotifyUserEvent.h" />
     <ClInclude Include="Compiler\ExpressionEvaluation\CNumericResult.h" />
     <ClInclude Include="Messaging\UserInitiated\COpenFileRequest.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Rendering\COverlapObjectRenderer.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\COverlayObject.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\COverlaySectionObject.h" />
+    <ClInclude Include="Components\MemoryVisualizer\Models\COverlayStatement.h" />
+    <ClInclude Include="Components\MemoryVisualizer\Models\COverlaySectionStatement.h" />
     <ClInclude Include="Models\CParameterSeparator.h" />
     <ClInclude Include="ParsingEngine\CParserViolation.h" />
     <ClInclude Include="Models\CPhdrsRegion.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CPhdrsRegionContentParser.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CPhdrsRegionParser.h" />
     <ClInclude Include="Models\CPhdrsStatement.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Placement\CPlacementEngine.h" />
     <ClInclude Include="Models\CProcedureCall.h" />
     <ClInclude Include="Compiler\ProcedureExecution\CProcedureExecutorBase.h" />
     <ClInclude Include="Messaging\CPubSubEvent.h" />
@@ -480,8 +464,7 @@
     <ClInclude Include="Messaging\UserInitiated\CSaveFileRequest.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CScopedRegionParser.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CScopedRegionParser.tpp" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CSectionObject.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Rendering\CSectionObjectRenderer.h" />
+    <ClInclude Include="Components\MemoryVisualizer\Models\CSectionOutput.h" />
     <ClInclude Include="Models\CSectionOutputAtLmaRegion.h" />
     <ClInclude Include="Models\CSectionOutputCommand.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CSectionOutputCommandParser.h" />
@@ -499,17 +482,12 @@
     <ClInclude Include="Models\CSectionsRegion.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CSectionsRegionParser.h" />
     <ClInclude Include="Messaging\UserInitiated\CShowAboutRequest.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CSizableObject.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CSizeIndicator.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Models\CStatementObject.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Rendering\CStatementRenderer.h" />
     <ClInclude Include="Models\CStringEntry.h" />
     <ClInclude Include="ParsingEngine\SubParsers\CSubParserBase.h" />
     <ClInclude Include="Models\CSymbol.h" />
     <ClInclude Include="Compiler\ExpressionEvaluation\CSymbolResult.h" />
     <ClInclude Include="DrcEngine\Rules\CSymbolsDefinedInAdvanceRule.h" />
     <ClInclude Include="Components\MemoryVisualizer\Models\CTooltip.h" />
-    <ClInclude Include="Components\MemoryVisualizer\Rendering\CTooltipRenderer.h" />
     <ClInclude Include="Messaging\UserInitiated\CUndoRequest.h" />
     <ClInclude Include="Models\CUnrecognizableContent.h" />
     <ClInclude Include="Models\CVersionNode.h" />
@@ -564,7 +542,7 @@
     <QtMoc Include="MainWindow.h">
     </QtMoc>
     <ClInclude Include="Components\QScintilla\scintilla\src\MarginView.h" />
-    <ClInclude Include="Components\MemoryVisualizer\ModelTranslator.h" />
+    <ClInclude Include="Components\MemoryVisualizer\CModelTranslator.h" />
     <ClInclude Include="Components\QScintilla\scintilla\lexlib\OptionSet.h" />
     <ClInclude Include="Components\QScintilla\scintilla\src\Partitioning.h" />
     <ClInclude Include="Components\QScintilla\scintilla\src\PerLine.h" />
